--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Contact Us</title>
+		<title>Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<style>
@@ -16,37 +16,43 @@
 	<body>
 		<header class="container">
 			<div class="container p-2 bg-primary text-center">
-				<p class=" text-capitalize text-white">This is my Portfolio Home Page</p>
+				<p class="text-capitalize text-white">THIS IS MY PORTFOLIO HOME PAGE</p>
 			</div>
 
-			<nav class="nav navbar-expand-sm">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">Resume</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="exp.html">Experience</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="qualification.php">Qualification</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-							Projects
-						</a>
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="java_p.html">Java Projects</a>
-							<a class="dropdown-item" href="web_p.html">Web development Projects</a>
-							<a class="dropdown-item" href="php_p.html">PHP Projects</a>
-						</div>
-					</li>
-				</ul>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="index.html">Portfolio</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">Resume</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="exp.html">Experience</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="qualification.php">Qualification</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Projects
+							</a>
+							<div class="dropdown-menu bg-warning" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item" href="java_p.html">Java Projects</a>
+								<a class="dropdown-item" href="web_p.html">Web development Projects</a>
+								<a class="dropdown-item" href="php_p.html">PHP Projects</a>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</nav>
 		</header>
 
