--- a/index.html
+++ b/index.html
@@ -19,39 +19,46 @@
 				<p class="text-capitalize text-white">THIS IS MY PORTFOLIO HOME PAGE</p>
 			</div>
 
-			<nav class="nav navbar-expand-sm">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">Resume</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="exp.html">Experience</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="qualification.php">Qualification</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-							Projects
-						</a>
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="java_p.html">Java Projects</a>
-							<a class="dropdown-item" href="web_p.html">Web development Projects</a>
-							<a class="dropdown-item" href="php_p.html">PHP Projects</a>
-						</div>
-					</li>
-				</ul>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="index.html">Portfolio</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">Resume</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="exp.html">Experience</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="qualification.php">Qualification</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Projects
+							</a>
+							<div class="dropdown-menu bg-warning" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item show-link" href="java_p.html">Java Projects</a>
+								<a class="dropdown-item" href="web_p.html">Web development Projects</a>
+								<a class="dropdown-item" href="php_p.html">PHP Projects</a>
+							</div>
+						</li>
+
+					</ul>
+				</div>
 			</nav>
 		</header>
-		<main class="container">
-			<div class="row ">
-				<div class="col-4 col-md-4 col-sm-12">
+		<main class="container mt-3">
+			<div class="row">
+				<div class="col-12 col-md-4 col-sm-12 col-lg-4 text-center">
 					<img src="img1.png" alt="vikas-kumar.png" class="img-set img-thumbnail">
 					<p class="ml-1 p-2">Name&nbsp;:&nbsp; Vikas Kumar
 						<br>City&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp; Jhansi
@@ -59,7 +66,7 @@
 					</p>
 					
 				</div>
-				<div class="col-8 col-md-8 col-sm-12">
+				<div class="col-12 col-md-8 col-sm-12">
 					<h3>Bio</h3>
 					<p>
 						<b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -68,11 +75,10 @@
 			</div>
 			
 		</main>
-
 		<footer>
-			<div class="fixed-bottom container">
+			<div class="fixed container">
 				<p class="text-center bg-light">Designed & Developed by:
-					<br>Vikas Kumar</p>
+				<br>Vikas Kumar</p>
 			</div>
 		</footer>
 		<!-- jQuery library -->
